@@ -3,6 +3,7 @@
 #include "udp/test_udp.h"
 #include "tcp/test_tcp.h"
 #include "tcp/test_tcp_oos.h"
+#include "core/test_mem.h"
 
 #include "lwip/init.h"
 
@@ -16,6 +17,7 @@ int main()
     udp_suite,
     tcp_suite,
     tcp_oos_suite,
+    mem_suite,
   };
   size_t num = sizeof(suites)/sizeof(void*);
   LWIP_ASSERT("No suites defined", num > 0);
